test/tasty/neg/src-2/TestIntent.check
TestIntent_fail.scala:6: error: Unsupported Scala 3 inline method here; found in object Position in package intent.
  apply("3 + 3") {
                 ^
TestIntent_fail.scala:7: error: could not find implicit value for parameter pos: tastytest.intent.Position
    in("should be 6")(toEqual(expect(3 + 3))(6))
                     ^
2 errors
